tests/NormalTests/paczka1/small_fuzzy/18918526.err
Error in line 4: CAjJ A568 90,4
Error in line 6: CAjJ A498 54,9
Error in line 1: A498 A568 39,2
Error in line 10: A498 S97 29,4
Error in line 7: CAjJ S387 92,8
